--- a/src/app/component/content/content-employee/new-employee-team/new-employee-team.component.html
+++ b/src/app/component/content/content-employee/new-employee-team/new-employee-team.component.html
@@ -23,7 +23,8 @@
                 </mat-select>
             </mat-form-field>
         </div>
-        <div>
+        <div class="end-flex">
+            Zapisz
             <button mat-icon-button type="submit" [disabled]="!teamGroupForm.valid">
                 <mat-icon>add_circle_outline</mat-icon>
               </button>
