--- a/src/app/component/content/content-employee/new-employee/new-employee.component.html
+++ b/src/app/component/content/content-employee/new-employee/new-employee.component.html
@@ -70,7 +70,8 @@
               </mat-form-field>
         </div>
 
-        <div>
+        <div class="end-flex">
+            Zapisz
             <button mat-icon-button type="submit" [disabled] = "!employeeGroupForm.valid">
                 <mat-icon>add_circle_outline</mat-icon>
               </button>
@@ -82,6 +83,6 @@
         <button mat-icon-button (click)="shouldDisplayForm(false)">
             <mat-icon>remove_circle_outline</mat-icon>
         </button>
-    </div>
+      </div>
 
 </section>
