--- a/src/app/component/content/content-duty/content-duty.component.html
+++ b/src/app/component/content/content-duty/content-duty.component.html
@@ -1,6 +1,6 @@
 <section >
 
-  <section *ngIf="isUserAuthenticated">
+  <section *ngIf="isUserAuthenticated" style="padding-top: 5px;">
     <div class="button-row" > 
       <button mat-raised-button (click)="addDutyType()" style="margin-left: 5px; background-color: #A89985;" >Zdefiniuj Nowy</button>
       <button mat-raised-button (click)="editDutyType()" style="margin-left: 5px; background-color: #A89985;" >Edytuj Istniejące</button>
