--- a/src/app/component/content/content-duty/horizontal-scheduler/horizontal-scheduler.component.css
+++ b/src/app/component/content/content-duty/horizontal-scheduler/horizontal-scheduler.component.css
@@ -38,13 +38,21 @@
   text-align: center;
   font-size: 18px;
   margin-bottom: 10px;
+  font-family: 'Merriweather';
+
 }
 
 .selected-day-event {
+    background-color: #ccc !important;
     margin-left: 2px;
     margin-right: 2px;
+}
+
+.today {
     background-color: #A89985 !important;
-    border: 2px solid #ccc !important; 
+    border: 1px solid #ccc !important; 
+    margin-left: 1px;
+    margin-right: 1px;
 }
 
 .res-column {
@@ -91,7 +99,7 @@
 }
 
 .weekend{
-    background-color: #f0f0f0;
+    background-color: #eee;
 }
 
 button {
