--- a/src/app/component/content/content-duty/new-duty-dialog/new-duty-dialog.component.html
+++ b/src/app/component/content/content-duty/new-duty-dialog/new-duty-dialog.component.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Zapisz Się na Dyżur</h2>
-<mat-dialog-content class="mat-typography">
+<mat-dialog-content class="mat-typography" style="padding-bottom: 0;">
   <form [formGroup]="dutyGroupForm">
 
     <div class="row">
