--- a/src/app/component/content/content-duty/dail-duty-list/dail-duty-list.component.html
+++ b/src/app/component/content/content-duty/dail-duty-list/dail-duty-list.component.html
@@ -19,7 +19,7 @@
             </tr>
           </table>
         </div>
-        <div *ngIf="dutyWrapper.fulfill === 100"><mat-icon class="custom-icon">done_outline</mat-icon></div>
+        <div *ngIf="dutyWrapper.fulfill >= 100"><mat-icon class="custom-icon">done_outline</mat-icon></div>
       </td>
     </tr>
   </table>
