--- a/src/app/component/main-page/main-page.component.html
+++ b/src/app/component/main-page/main-page.component.html
@@ -19,6 +19,7 @@
             <app-content-document *ngIf="contentType === contentEnum.DOCUMENT" />
             <app-content-duty *ngIf="contentType === contentEnum.DUTY" />
             <app-content-link *ngIf="contentType === contentEnum.LINK" />
+            <app-content-settings *ngIf="contentType === contentEnum.ADMIN" />
           </div>
 
           <div class="sidenav right-sidenav">
