feature-29 display, update social media. New view for user password change and new user

--- a/src/app/component/content/content-settings/change-password/change-password.component.html
+++ b/src/app/component/content/content-settings/change-password/change-password.component.html
@@ -1,1 +1,47 @@
-<p>change-password works!</p>
+
+<section *ngIf="shouldComponentBeRender" >
+    <div class="header">
+        <h4 style="font-family: 'Roboto'; margin-left: 20px;">Zmiana Hasła</h4>
+        <div style="margin-right: 20px;">
+            <button mat-icon-button (click)="shouldDisplayForm(false)"><mat-icon>remove_circle_outline</mat-icon></button>
+        </div>
+    </div>
+
+    <form [formGroup]="passwordForm" (ngSubmit)="save()">
+            <mat-form-field  style="width: 300px; margin-right: 20px;">
+                <mat-label>Stare hasło</mat-label>
+                <input matInput type="password" placeholder="hasło" formControlName="oldPassword">
+            </mat-form-field>
+
+            <mat-form-field  style="width: 300px; margin-right: 20px;">
+                <mat-label>Nowe hasło</mat-label>
+                <input matInput [type]="passwordFieldType" placeholder="hasło" formControlName="newPassword">
+            </mat-form-field>
+
+            <mat-form-field  style="width: 300px; margin-right: 20px;">
+                <mat-label>Powtórz Nowe hasło</mat-label>
+                <input matInput [type]="passwordFieldType" placeholder="hasło" formControlName="confirmPassword">
+                <button
+                    matSuffix
+                    mat-icon-button
+                    aria-label="Clear" 
+                    type="button"
+                    (click)="togglePasswordVisibility()"> <mat-icon>remove_red_eye</mat-icon> </button>
+            </mat-form-field>
+
+        <div class="end-flex">
+            Zapisz:
+            <button mat-icon-button type="submit">
+                <mat-icon>add_circle_outline</mat-icon>
+            </button>
+        </div>
+    </form>
+    
+    <div class="end-flex">
+        Przerwij zmiane hasła:
+        <button mat-icon-button (click)="shouldDisplayForm(false)">
+            <mat-icon>remove_circle_outline</mat-icon>
+        </button>
+    </div>
+
+</section>
